# MIT_test

./: .gitignore  0_123.py  0_1234.py  0_589.py  0_context.py  0_rag.py  10_convert_finetune.py  11_combine_dataset.py  1_convert_language.py  1_convert_wav.py  1_youtube.py  2_human_voice.py  2_seperate_sentence.py  3_convert_channel.py  3_remove_repeat.py  4.1_whisper.py  4.2_pyannote.py  4_bertopic.py  4_devide_group.py  4_seperate_part.py  4_test_splitter.py  4pw_transcription.py  5.1_combine_wp.py  5_bertopic.py  5_convert_splitter.py  5_devide_group.py  5_similarity.py  5_top2vec.py  6_convert_txt.py  6_seperate_part.py  6_speaker_splitter.py  7_cut_voice.py  7_folder.py  8_convert_dataset.py  9_extract.py  Jenny.code-workspace  README.md  convert_splitter.py  convert_wav.py  cut_voice.py  (+10 more)
WhisperX/: 6_speaker_splitter.py
city/output/: answer.json  sentence.json  sentence_clean.json  shortened.json  traditional.json
output/: answer.json  bertopic01.json  bertopic02.json  bertopic03.json  bertopic04.json  bertopic05.json  bertopic06.json  bertopic07.json  bertopic08.json  bertopic09.json  bertopic10.json  finetune.json  group00.json  group02.json  group03.json  group04.json  group05.json  qa_dataset_all.json  qa_dataset_part.json  questions_all.txt  questions_part.txt  sentence.json  sentence_clean.json  shortened01.json  top2vec00.json  top2vec00_model.model  top2vec01.json  top2vec01_model.model  traditional.json
output/answers/: 0001.json  0002.json  0003.json  0004.json  0005.json  0006.json  0007.json  0008.json  0009.json  0010.json  0011.json  0012.json  0013.json  0014.json  0015.json  0016.json  0017.json  0018.json  0019.json  0020.json  0021.json  0022.json  0023.json  0024.json  (+536 more)
tone_clean/: 4_devide_group.py  4_top2vec.py
voice_data/: README.md  slice_1440.txt  slice_2160.txt
(+631 files in other folders)
