[project]
name = "mittest"
version = "0.1.0"
description = ""
authors = [
    {name = "Jenny"}
]
readme = "README.md"
requires-python = ">=3.9, <3.13"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "whisperx (==3.3.2)",
    "nvidia-cublas-cu11 (>=11.11.3.6,<12.0.0.0)",
    "nvidia-cudnn-cu11 (>=9.10.2.21,<10.0.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "demucs (>=4.0.1,<5.0.0)",
    "opencc-python-reimplemented (>=0.1.7,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false