[project]
name = "mit-test"
version = "0.1.0"
description = ""
authors = [
    {name = "linboso",email = "linboso0@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "langgraph (>=0.5.4,<0.6.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "langchain-text-splitters (>=0.3.8,<0.4.0)",
    "jq (>=1.10.0,<2.0.0)",
    "langchain-openai (>=0.3.28,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
